--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,94 @@
 body {
-  background: blueviolet;
+  background-color: gainsboro;
   font-family: "Sawarabi Mincho", serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.weather-app {
+a {
+  color: blueviolet;
+}
+
+.app {
   background: white;
   max-width: 600px;
   margin: 50px auto;
-  box-shadow: 0 30px 50px rgba(69, 50, 114, 0.08);
+  box-shadow: 0 30px 50px rgba(35, 109, 179, 0.08);
   border-radius: 16px;
   padding: 30px;
+}
+
+header {
+  border-bottom: 1px solid gainsboro;
+  padding: 0 0 30px 0;
+}
+
+.search-form-input {
+  background-color: gainsboro;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+
+.search-form-button {
+  background: blueviolet;
+  padding: 15px 20px;
+  border: none;
+  border-radius: 6px;
+  color: white;
+  font-size: 16px;
+}
+
+main {
+  padding: 30px 0;
+}
+
+.app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.app-city {
+  margin: 0;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.app-details {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 500;
+}
+
+.app-details strong {
+  color: rgba(172, 3, 45, 0.932);
+}
+
+.app-temp-container {
+  display: flex;
+}
+
+.app-icon {
+  font-size: 45px;
+  margin-top: 20px;
+}
+
+.app-temp-value {
+  font-size: 80px;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.app-unit {
+  margin-top: 12px;
+  font-size: 25px;
+}
+footer {
+  border-top: 1px solid gainsboro;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.6);
 }
