--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,33 @@ main {
   margin-top: 6px;
   font-size: 25px;
 }
+
+.weather {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.weather-date {
+  text-align: center;
+  color: rgb(26, 26, 68);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+.weather-icon {
+  font-size: 30px;
+  text-align: center;
+}
+
+.weather-unit {
+  margin-top: 10px;
+  text-align: center;
+  color: rgba(172, 3, 45, 0.932);
+  justify-content: center;
+}
+
 footer {
   border-top: 1px solid gainsboro;
   padding: 30px 0 0 0;
